test/files/neg/warn-unused-params.check
warn-unused-params.scala:13: warning: parameter b in method f is never used
        b: String,               // warn
        ^
warn-unused-params.scala:36: warning: parameter s in method i is never used
  def i(implicit s: String) = answer           // yes, warn
                 ^
warn-unused-params.scala:53: warning: parameter u in class Unusing is never used
class Unusing(u: Int) {       // warn
              ^
warn-unused-params.scala:63: warning: parameter s in class CaseyAtTheBat is never used
case class CaseyAtTheBat(k: Int)(s: String)        // warn
                                 ^
warn-unused-params.scala:66: warning: parameter readResolve in method f is never used
  def f(readResolve: Int) = answer           // warn
        ^
warn-unused-params.scala:81: warning: parameter dummy in method g is never used
  def g(dummy: DummyImplicit) = answer
        ^
warn-unused-params.scala:86: warning: parameter ev in method f2 is never used
  def f2[A, B](ev: A =:= B) = answer
               ^
warn-unused-params.scala:87: warning: parameter ev in method g2 is never used
  def g2[A, B](ev: A <:< B) = answer
               ^
warn-unused-params.scala:91: warning: parameter i in anonymous function is never used
  def f = (i: Int) => answer      // warn
            ^
warn-unused-params.scala:101: warning: parameter ctx in method f is never used
  def f[A](implicit ctx: Context[A]) = answer
                    ^
warn-unused-params.scala:102: warning: evidence parameter evidence$1 of type Context[A] in method g is never used
  def g[A: Context] = answer
           ^
warn-unused-params.scala:104: warning: evidence parameter evidence$2 of type Context[A] in class Bound is never used
class Bound[A: Context]
               ^
warn-unused-params.scala:111: warning: parameter b in method f is never used
        b: String,               // warn
        ^
warn-unused-params.scala:134: warning: parameter s in method i is never used
  def i(implicit s: String) = answer           // yes, warn
                 ^
warn-unused-params.scala:142: warning: parameter s in method f is never used
  def f(s: Serializable) = toString.nonEmpty  // warn explicit param of marker trait
        ^
error: No warnings can be incurred under -Werror.
15 warnings
1 error
